# MetaTwin-X

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  POSTER_A1.md  PROJECT_DOCUMENTATION.md  README.md  RESEARCH_PAPER.md  TEST_REPORT.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  sample_health_profile.json  sample_lab_report.txt  start.bat
.streamlit/: config.toml
backend/: main.py
backend/api/: advanced.py
backend/core/: adaptive_interaction.py
backend/db/: database.py
backend/reports/: __init__.py  html_generator.py  report_generator.py
backend/rl/: agent.py
backend/routes/: predict.py  recommend.py  report.py  simulate.py
backend/schemas/: health.py
backend/simulation/: ode_engine.py
backend/streaming/: websocket_manager.py
backend/twin/: digital_twin.py
backend/xai/: causal_engine.py  counterfactuals.py  llm_reasoning.py
components/: __init__.py
components/organ_viewer/: __init__.py
config/: physiological_ranges.yaml  recommendations.yaml  simulation.yaml  training.yaml
dashboard/: styles.py
dashboard/components/: gauge_chart.py  shap_bar_chart.py  timeline_chart.py
dashboard/sections/: about.py  documentation.py  explanations.py  (+8 more)
metatwin-frontend/: package-lock.json  package.json
scripts/: retrain_models.py
src/: __init__.py  color_mapping.py  exceptions.py  interaction_engine.py  prediction_engine.py  preprocessor.py  recommendation_engine.py  report_parser.py  serializer.py  simulation_engine.py  xai_module.py
tests/: conftest.py
(+72 files in other folders)
